--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -521,7 +521,9 @@ div[class^="rsg--tab"] {
 // Code highlighting elsewhere
 span[class^="rsg--type"],
 code[class^="rsg--code"] {
-  color: $dark;
+  font-family: $font-mono;
+  color: $red !important;
+  border: 1px solid $gray-300;
 }
 span[class^="rsg--name"] code[class^="rsg--code"],
 code.name {
