--- a/src/styles/_bulma.scss
+++ b/src/styles/_bulma.scss
@@ -10,15 +10,15 @@
 // $family-sans-serif: $font-text;
 // $family-monospace: $font-mono;
 
-// $primary: $brand;
+// $primary: $color-brand;
 // $primary-invert: $grey-600-light;
-// $link: $blue-600;
-// $info: $blue-500;
-// $success: $green-500;
-// $warning: $orange-600;
-// $danger: $red-500;
-// $dark: $dark;
-// $text: $dark;
+// $link: $color-blue-600;
+// $info: $color-blue-500;
+// $success: $color-green-500;
+// $warning: $color-orange-600;
+// $danger: $color-red-500;
+// $color-dark: $color-dark;
+// $text: $color-dark;
 
 // @import "~bulma/sass/utilities/_all.sass";
 // @import "~bulma/sass/base/_all.sass";
