--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -223,10 +223,6 @@ div[class^="rsg--sidebar"] {
 
 // Previews of the components
 div[class^="rsg--preview"] {
-  // padding: theme('spacing.12') / 1.2;
-  // background-color: var(--bg-color);
-  // border: 1px solid theme('colors.grey');
-  // box-shadow: inset 0 0 theme('spacing.2') theme('colors.gray.200');
   padding: 0;
   border: 0;
   margin: 0;
@@ -274,7 +270,7 @@ thead[class^="rsg--tableHead"] {
 pre[class^="rsg--pre"],
 .vueds-html.cm-s-night.CodeMirror,
 .react-codemirror2 .CodeMirror.CodeMirror {
-  background: theme('colors.dark');
+  background: theme('colors.black');
   border-bottom-left-radius: theme('borderRadius.sm');
   border-bottom-right-radius: theme('borderRadius.sm');
   box-sizing: border-box;
@@ -337,7 +333,6 @@ div[class^="rsg--tab"] {
       }
       &--active {
         background: theme('colors.blue');
-        box-shadow: inset 0 2px 8px theme('colors.gray.200');
       }
     }
   }
